--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,24 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+@layer utilities {
+  .custom-scrollbar {
+    scrollbar-width: thin; /* Para Firefox */
+  }
+
+  .custom-scrollbar::-webkit-scrollbar {
+    height: 8px;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background-color: #f3f4f6;
+  }
+}
+
 a {
   font-weight: 500;
   color: #646cff;
