--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@
     animation: logo-spin infinite 20s linear;
   }
 }
-
+/*
 .card {
   padding: 2em;
 }
@@ -39,3 +39,4 @@
 .read-the-docs {
   color: #888;
 }
+*/
