--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+@layer base {
+  ::selection {
+    @apply bg-primary;
+  }
+}
+
 @layer utilities {
   .custom-scrollbar {
     scrollbar-width: thin; /* Para Firefox */
@@ -36,11 +42,7 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
   text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 body {
@@ -67,13 +69,6 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -81,7 +76,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #009688;
   }
   button {
     background-color: #f9f9f9;
